--- a/OpenCV/ex201230_cpp_opencv/ex201230/ex201230.vcxproj.filters
+++ b/OpenCV/ex201230_cpp_opencv/ex201230/ex201230.vcxproj.filters
@@ -18,5 +18,11 @@
     <ClCompile Include="Main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Main_0106.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Main_0106_histogram.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
