실제 이미지로 omr 카드 인식률 확인, omr 마킹 인식률 확인

--- a/OpenCV_CODE/OpenCV_OMR_Project/OMR_ProJect/OMR_ProJect.vcxproj
+++ b/OpenCV_CODE/OpenCV_OMR_Project/OMR_ProJect/OMR_ProJect.vcxproj
@@ -146,9 +146,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="tinystr.cpp" />
+    <ClCompile Include="tinyxml.cpp" />
+    <ClCompile Include="tinyxmlerror.cpp" />
+    <ClCompile Include="tinyxmlparser.cpp" />
     <ClCompile Include="transform.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="tinystr.h" />
+    <ClInclude Include="tinyxml.h" />
     <ClInclude Include="transform.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
