--- a/OpenCV_CODE/OpenCV_OMR_Project/OMR_ProJect/OMR_ProJect.vcxproj.filters
+++ b/OpenCV_CODE/OpenCV_OMR_Project/OMR_ProJect/OMR_ProJect.vcxproj.filters
@@ -21,9 +21,27 @@
     <ClCompile Include="transform.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="tinystr.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="tinyxml.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="tinyxmlerror.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="tinyxmlparser.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="transform.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="tinystr.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="tinyxml.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
